Sync all content

--- a/content/resources/9-012s06-th.md
+++ b/content/resources/9-012s06-th.md
@@ -15,7 +15,9 @@ image_metadata:
     \ of MIT Department of Brain and Cognitive Sciences.)"
   credit: ''
   image-alt: Photo collage of images related to cognition.
+learning_resource_types: []
 resourcetype: Image
 title: Cognition (thumbnail)
+type: OCWImage
 uid: 9181d265-6d53-5ca2-a7ec-81df2ea8c9c7
 ---
