--- a/content/resources/9-012s06.md
+++ b/content/resources/9-012s06.md
@@ -15,7 +15,9 @@ image_metadata:
     \ of MIT Department of Brain and Cognitive Sciences.)"
   credit: ''
   image-alt: Photo collage of images related to cognition.
+learning_resource_types: []
 resourcetype: Image
 title: Cognition
+type: OCWImage
 uid: eb705ded-0b07-6c7f-ff3a-002c3dfef593
 ---
