Sync all content

--- a/content/resources/9-012s06-th.md
+++ b/content/resources/9-012s06-th.md
@@ -16,6 +16,7 @@ image_metadata:
   credit: ''
   image-alt: Photo collage of images related to cognition.
 learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: Cognition (thumbnail)
 uid: 9181d265-6d53-5ca2-a7ec-81df2ea8c9c7
