--- a/content/resources/9-012s06.md
+++ b/content/resources/9-012s06.md
@@ -16,6 +16,7 @@ image_metadata:
   credit: ''
   image-alt: Photo collage of images related to cognition.
 learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: Cognition
 uid: eb705ded-0b07-6c7f-ff3a-002c3dfef593
